# wigtn-ai-agent

./: .gitignore  agent.py  main.py  pyproject.toml  tools.py
docs/prd/: PRD_langgraph-ai-agent.md  PRD_langgraph-ai-agent_analysis.md
docs/todo_plan/: PLAN_langgraph-ai-agent.md
